fix line z-index

--- a/src/styles/05-objects/_objects.main.scss
+++ b/src/styles/05-objects/_objects.main.scss
@@ -14,6 +14,7 @@
     height: 100%;
     transform: translateX(-50%);
     display: flex;
+    z-index: 2;
   }
 
   &__line {
